<package format="2">
  <name>grapebot_gazebo_sim</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for grapebot_gazebo_sim</p>
    <p>This package contains configuration data, 3D models and launch files
for grapebot_gazebo_sim robot</p>
  </description>
  <author>Rayne Milner</author>
  <maintainer email="rmmilner@ucdavis.edu" />
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>
  <depend>grapebot_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <export>
    <architecture_independent />
  </export>
</package>